[package]
name = "graphql-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = "7.0.2"
async-graphql-axum = "7.0.2"
async-trait = "0.1.77"
axum = {version = "0.7.4", features = ["macros"]}
base64 = "0.22.0"
futures-util = "0.3.30"
jsonwebtoken = "9.2.0"
reqwest = { version = "0.11.26", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.0", features = ["full"] }
